--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 rel="stylesheet"/>
-<link type="text/css" rel="stylesheet" href="css/style.css"/>
+<link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <!-- NAVBAR -->
@@ -138,6 +138,6 @@ id="checkbox" required />
 </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
